# agent-tool-description-format

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .yamllint.yml  AGENTS.md  BACKLOG.md  CHANGELOG.md  COMMIT_MESSAGE.md  DELIVERY_SUMMARY.md  Dockerfile  GUIA_INTEGRACION_N8N.md  IMPLEMENTATION_SUMMARY.md  INSTRUCCIONES_IMPORTAR_WORKFLOWS.md  Makefile  PROJECT_SUMMARY.md  README.md  README_BMAD.md  RELEASE_CHECKLIST_v2.1.0.md  RELEASE_NOTES_v2.1.0_ES.md  UPDATE_SUMMARY.md  _config.yml  bmad.config.yml  conftest.py  coverage.xml  cred_atdf_selector.json  credenciales_selector.json  docker-compose.dev.yml  docker-compose.yml  estado_final_integracion.md  import_workflows_to_n8n.py  improved_loader.py  install_bmad.bat  install_bmad.sh  mcp_client.js  mcp_manifest.json  mlc_config.json  n8n_setup_complete.md  package.json  (+13 more)
.github/workflows/: ardf-ci.yml  atdf-migration.yml  check-docs.yml  ci.yml  pages.yml  validate-tools.yml
ardf-manager/: .eslintignore  .eslintrc.js  .gitignore  AUTONOMY_GUIDE.md  README.dev.md  README.md  package.json  tsconfig.base.json
bmad/: bmad_status.json  project_brief.md
bmad/agents/: atdf-specialist.md  bmad-orchestrator.md
bmad/tools/: analyst_atdf_tools.json  architect_atdf_tools.json  atdf_all_tools.json  dev_atdf_tools.json  pm_atdf_tools.json  qa_atdf_tools.json
bmad/workflows/: atdf-enhancement.yml  tool-integration.yml
cli/: __init__.py  main.py
docs/: ATDF_SPECIFICATION.md  BEST_PRACTICES.md  BMAD_INTEGRATION.md  CLI_REFERENCE.md  CONCEPTS.md  IMPLEMENTATION_GUIDE.md  MERMAID_DIAGRAMS.md  _config.yml  api.json  atdf_mcp_n8n_integration_flow.md  changelog.md  contributing.md  enhancement_proposal.md  examples.md  faq.md  index.md  license.md  mcp_to_atdf_migration_checklist.md  monitoring.md  multilingual.md  n8n_mcp_atdf_index.md  server_profile.md  specification.md  tool_selector.md  usage_examples.md  workflow.md
docs/advanced-usage/: vector-search.md
docs/aep/: AEP-001-validator-alignment.md  AEP-002-error-schema.md  AEP-003-cli-toolkit.md  AEP-004-server-profile.md
docs/en/: best_practices_enriched_responses.md  changelog.md  contributing.md  enhancement_proposal.md  enriched_responses_guide.md  examples.md  faq.md  index.md  license.md  migration_guide.md  multilingual.md  n8n_mcp_integration_flow.md  n8n_mcp_server_guide.md  newcomer_overview.md  redesign_guidelines.md  specification.md  version_compatibility.md  workflow.md
docs/es/: changelog.md  contributing.md  enhancement_proposal.md  examples.md  faq.md  index.md  license.md  multilingual.md  n8n_mcp_integracion_flujo.md  n8n_mcp_server_guide.md  newcomer_overview.md  redesign_guidelines.md  specification.md  version_compatibility.md  workflow.md
docs/pt/: changelog.md  contributing.md  enhancement_proposal.md  examples.md  faq.md  index.md  license.md  multilingual.md  n8n_mcp_fluxo_integracao.md  n8n_mcp_server_guide.md  newcomer_overview.md  redesign_guidelines.md  specification.md  version_compatibility.md  workflow.md
docs/version-comparison/: README.md
docs/web/: index.html  script.js  styles.css  versions.html
email_validator/: __init__.py
email_validator-2.0.0.dist-info/: METADATA
examples/: _fastapi_stub.py  basic_usage.py  date_validator.json  demo_atdf_errors.py  enriched_responses_example.py  fastapi_mcp_integration.py  http_client.py  mcp_atdf_bridge.py  mcp_conversion_example.py  n8n_atdf_integration_example.json  n8n_mcp_comparison_workflow.json  n8n_working_example.json  real_world_integration.py  requirements-n8n-integration.txt  requirements_fastapi_mcp.txt  setup_n8n_atdf_integration.py  test_fastapi_mcp.py  test_metadata_implementation.py  test_metrics.py  validation_patterns.py  vector_search.py  vector_search_example.py
examples/ardf/: document_medical_guidelines.json  model_symptom_classifier.json  policy_patient_privacy.json  prompt_appointment_coordinator.json  tool_flight_booking.json  validate_node.js  validate_python.py  workflow_medical_appointment.json
examples/ardf_samples/: connector_crm.json  dataset_products.json  document_medical_guidelines.json  model_symptom_classifier.json  policy_patient_privacy.json  prompt_appointment_coordinator.json  tool_appointment_create.json  validate_node.js  validate_python.py  (+1 more)
httpx/: __init__.py
js/: .eslintrc.js  README.md  jest.config.js  jest.setup.js  package-lock.json  package.json
monitoring/: alert_rules.yml  prometheus.yml
n8n-nodes-ardf/: README.dev.md  index.ts
n8n-nodes-atdf-mcp/: .eslintrc.js  .prettierrc  README.md  gulpfile.js  n8n-nodes-atdf-mcp-1.0.0.tgz  package-lock.json  package.json
n8n-workflows/: README.md  codex-flight-cli-test.json  codex-hotel-cli-test.json  complete-travel-booking.json  complete-travel-workflow-code-v2.json  complete-travel-workflow-code-v3.json  complete-travel-workflow-code.json  complete-travel-workflow-mcpclient.json  complete-travel-workflow-noslack.json  complete-travel-workflow.json  exported  flight-booking-test.json  flight-booking-workflow.json  hotel-reservation-test.json  hotel-reservation-workflow.json
prometheus_client/: __init__.py
schema/: ardf.schema.json  atdf_schema.json  enhanced_atdf_schema.json  enriched_response_schema.json  error_atdf.json
scripts/: init-db.sql  query_n8n_db.py  run_atdf_migration.py  setup_monitoring.py  start_all_services.bat  start_all_services.ps1  start_all_services.sh  stop_all_services.bat  stop_all_services.ps1  stop_all_services.sh
sdk/: README.md  __init__.py  atdf_sdk.py  examples.py  vector_search_cli.py
selector/: __init__.py  api.py  catalog.py  cli.py  ranker.py  storage.py
tests/: examples  run_all_tests.py  test_ardf_mcp_server.py  test_atdf_complete.py  test_cli.py  test_enhanced_features.py  test_examples.py  test_integration.py  test_server_profile.py  test_trilingual_agent.py  test_validator.py  test_vector_search.py  test_vector_search_search_cli.py
tools/: __init__.py  bmad_atdf_integration.py  converter.py  enhanced_loader.py  generate_docs.py  mcp_converter.py  requirements.txt  validate_enhanced.py  validator.py
(+136 files in other folders)
